--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "framer-motion": "^7.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.70",
+    "react-particles": "^2.5.3",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "tsparticles": "^2.5.3",
+    "tsparticles-engine": "^2.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
