--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-parallax-tilt": "^1.7.70",
     "react-particles": "^2.5.3",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
