--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^7.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-parallax-tilt": "^1.7.70",
     "react-particles": "^2.5.3",
     "react-redux": "^8.0.5",
