--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
+    "swiper": "^8.4.5",
     "tsparticles": "^2.5.3",
     "tsparticles-engine": "^2.5.2",
     "web-vitals": "^2.1.4"
